# PICO_SPI_CAM

./: CMakeLists.txt  LICENSE  README.md
ArduCAM/: ArduCAM.cpp  ArduCAM.h  CMakeLists.txt
C/: CMakeLists.txt
C/ArduCAM/: ArduCAM.cpp  ArduCAM.h  ov2640_regs.h  ov5642_regs.h
C/Examples/ArduCAM_Mini_2MP_Plus_4CAM_VideoStreaming/: ArduCAM_Mini_2MP_Plus_4CAM_VideoStreaming.cpp  CMakeLists.txt
C/Examples/ArduCAM_Mini_5MP_Plus_4CAM_VideoStreaming/: ArduCAM_Mini_5MP_Plus_4CAM_VideoStreaming.cpp  CMakeLists.txt
C/Examples/Arducam_MINI_2MP_Plus_Videostreaing/: Arducam_MINI_2MP_Plus_Videostreaing.cpp  CMakeLists.txt
C/Examples/Arducam_MINI_2MP_Plus_Videostreaming/: Arducam_MINI_2MP_Plus_Videostreaming.cpp  CMakeLists.txt  README.md
C/Examples/Arducam_MINI_5MP_Plus_Videostreaing/: Arducam_MINI_5MP_Plus_Videostreaing.cpp  CMakeLists.txt
C/Examples/Arducam_MINI_5MP_Plus_Videostreaming/: CMakeLists.txt
Examples/ArduCAM_Mini_2MP_Plus_4CAM_VideoStreaming/: CMakeLists.txt
Examples/Arducam_MINI_2MP_Plus_Videostreaing/: Arducam_MINI_2MP_Plus_Videostreaing.cpp  main.cpp
Examples/Arducam_MINI_5MP_Plus_Videostreaing/: Arducam_MINI_5MP_Plus_Videostreaing.cpp  CMakeLists.txt
HostApp/: Setting.ini
Python/: ArduCAM_Mini_2MP_Plus_VideoStreaming.py  ArduCAM_Mini_5MP_Plus_VideoStreaming.py  Arducam.py  OV2640_reg.py  OV5642_reg.py
